added xml and programmatic animations on each restaurant tile in SavedRestaurantsActivity

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-YelpConsumerKey = "rNwRmolMXQ5A1n6cqPSt3g";
-YelpConsumerSecret = "llYZ6qbtue_AIzb9WxaCBYCM_IU";
-YelpToken = "OcquCGqVrI5XkWeSfkBNQu_iCqa_rVmY";
-YelpTokenSecret = "yDaSF157jqoe4whDD2plK-eVPPU";
+YelpConsumerKey = "jwB2p4EXFMRMu8AvqXFpLg";
+YelpConsumerSecret = "z20FqRPZrqqIkKrxc4USFDXDudE";
+YelpToken = "S8Thhm7Y2aK6JVpY6YdebC28Z3RKnbGf";
+YelpTokenSecret = "aok5WZdk5XFIFh2bbkjDx91xEVs";
